app/globals.css
/* ... */
.textheader {
  filter: url(#textheader);
}

.bord,
.bord1,
.bord2 {
  backface-visibility: hidden;
  -webkit-font-smoothing: subpixel-antialiased;
}

.cardeffect {
  position: relative;
  overflow: hidden;
  border: 1px solid rgba(45, 45, 45, 0.75);
  perspective: 1000px;
  transform: rotateX(var(--xRotation)) rotateY(var(--yRotation));
  transition: transform 0.5s ease-out;
  touch-action: none;
}

@media screen and (max-width: 800px) {
  .cardeffect,
  .cardeffect::after,
  .cardeffect::before,
  .cardeffect:hover::before {
    pointer-events: none;
  }
}

.cardeffect::before {
  position: absolute;
  content: "";
  top: var(--y);
  left: var(--x);
  width: calc(200% - 4px);
  height: calc(200% - 4px);
  transform: translate(-50%, -50%);
  background: radial-gradient(ellipse, rgba(255, 2, 255, 0.9) 0%, transparent 50%);
  backdrop-filter: blur(30px) contrast(20px);
  opacity: 0;
  z-index: -99;
  touch-action: none;
}

.cardeffect:hover::before {
  opacity: 1;
  touch-action: none;
}

.cardeffect::after {
  width: calc(100% - 4px);
  height: calc(100% - 4px);
  content: "";
  position: absolute;
  inset: 4px;
  background: rgba(45, 45, 45, 0.75);
  z-index: -99;
  border-radius: 20px;
  touch-action: none;
}

.settings.active {
  animation: shift 1s linear forwards, roll 5s linear infinite;
}

.activebanny {
  animation: reveal 0.5s ease-in-out forwards;
}

@keyframes roll {
  to {
    transform: translateX(50%) rotate(360deg);
  }
}

@keyframes shift {
  to {
    transform: translateX(50%);
  }
}

@keyframes reveal {
  to {
    transform: translateX(-120%);
  }
}

.blink {
  animation: 10s 3s infinite blink;
}

@keyframes blink {
  /* eye blinking */
  3% {
    height: 0.05rem;
    /* transform: translateY(0.7rem); */
  }
  7% {
    height: 1.4rem;
    transform: translateY(0);
  }
}

#user,
#password,
#button,
#forgot {
  opacity: 0;
}

#form {
  animation: move 0.5s linear forwards;
}

@keyframes move {
  0% {
    transform: translateY(50%);
    opacity: 0;
  }
  50%,
  100% {
    transform: translateY(0%);
    opacity: 1;
  }
}

.iconbtn {
  left: 0.5rem;
  position: relative;
  animation: jiggle 0.5s linear forwards;
}

.textbtn {
  position: relative;
  margin-left: 1.5rem;
  font-weight: bold;
  font-size: 18px;
}

.buttonBtn {
  --width: 100%;
  height: 70px;
  position: relative;
  width: calc(var(--width) + 1.5rem + 2rem);
  padding: 1rem 2rem;
  border-radius: 9999px;
  display: flex;

  /* border: 1px solid white; */
}

.buttonBtn::before {
  position: absolute;
  display: flex;
  justify-content: center;
  top: 0;
  left: 0;
  content: "";
  width: 70px;
  height: 100%;
  border-radius: 9999px;
  border: 1px solid white;
  transition: width 0.5s ease-in-out;

  animation: intro 0.5s linear alternate;
}

.buttonBtn:hover::before {
  width: 100%;
  background-color: rgba(255, 255, 255, 0.2);
  backdrop-filter: blur(20px);
}

.buttonBtn > p {
  z-index: 99999;
}

/** ----------------------------------------------**/

.tertiaryBtn {
  --width: 100%;
  height: 70px;
  position: relative;
  width: calc(var(--width) + 1.5rem + 2rem);
  padding: 1rem 2rem;
  border-radius: 9999px;
  display: flex;

  /* border: 1px solid white; */
}

.tertiaryBtn::before {
  position: absolute;
  display: flex;
  justify-content: center;
  top: 0;
  left: 0;
  content: "";
  /* background-color: rgba(0, 0, 0, 0.5); */
  backdrop-filter: blur(20px);
  width: 70px;
  height: 100%;
  border-radius: 9999px;
  border: 1px solid black;
  transition: width 0.5s ease-in-out;

  animation: intro 0.5s linear alternate;
}

.tertiaryBtn:hover::before {
  width: 100%;
  background-color: black;
  transition: background-color 0.5s ease-out, width 0.5s ease-out;
}

.tertiaryBtn:hover .arrowRight {
  width: 100%;
  color: #d88dfc;
  transition: color 0.5s ease-in-out;
}

.tertiaryBtn:hover > p {
  width: 100%;
  color: #d88dfc;
  transition: color 0.5s ease-in-out;
}

.arrowRight {
}

.headerstyles.active div .buttonBtn::before {
  animation: intro 0.5s linear forwards;
}

.arrowRight {
  animation: jiggle 0.5s linear forwards;
}

.headerstyles.active div .textbtn {
  animation: fade 0.5s 300ms linear forwards;
}

.curtain {
  position: absolute;
  top: -18.3vmin;
  right: 33vmin;
  z-index: -99;
}

.textScrollAnimation {
  font-size: 25px;
  font-weight: bold;
  background: linear-gradient(white, white);
  background-size: auto;
  background-position: 100%;
  background-clip: text;
}

.moveImageSection {
  perspective: 1000px;
}

#moveImage {
  transform: rotateY(40deg);
}

@keyframes flow {
}

@keyframes jiggle {
  from {
    opacity: 0;
    transform: translateX(-50px);
  }
  to {
    transform: translateX(0px);
    opacity: 1;
  }
}

@keyframes intro {
  from {
    transform: scale(0);
    opacity: 0;
  }
  to {
    transform: scale(1);
    opacity: 1;
  }
}

@keyframes fade {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

#header1,
#text1 {
  font-size: clamp(2rem, 10vw, 6rem);
}

#header3 {
  font-size: clamp(2.5rem, 4vw, 5rem);
}

.billsection {
  font-size: clamp(0.3rem, 10vw, 3rem);
  background: linear-gradient(rgba(239, 239, 239, 0.1), rgba(239, 239, 239, 0.5)),
    radial-gradient(ellipse at left, rgba(0, 255, 255, 0.2) 0%, transparent 50%) 0% 0% / 100% 80%,
    radial-gradient(ellipse, rgba(255, 119, 0, 0.2) 10%, transparent 50%) 0% 100% / 60% 80%,
    radial-gradient(ellipse at right, rgba(229, 255, 0, 0.2) 10%, transparent 50%) 100% 0% / 60%
      100%;
  background-repeat: no-repeat;
  backdrop-filter: blur(30px);
}
/* ... */

